# final-seminario-rust-2023

./: .gitignore  Cargo.toml  README.md  lib.rs  tarpaulin.toml
club_sem_rust/: .gitignore  Cargo.toml  club_sem_rust.rs  lib.rs  tarpaulin.toml
structs/: categoria.rs  deporte.rs  mod.rs  pago.rs  recibo.rs  socio.rs
