[package]
name = "gestor_de_cobros"
version = "0.1.0"
authors = ["JoacoSlime <JoacoSlime@proton.me>", "Lara Cellini <GonzaloLucchi2@gmail.com>", "Nicolás Montanari <nicomontviv@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
club_sem_rust = { path = "club_sem_rust", default-features = false, features = ["ink-as-dependency"] }
chrono = "0.4.26"

[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "club_sem_rust/std"]
ink-as-dependency = []
e2e-tests = []
